leadercards: Use Optional instead of null for abilities